# VarDictRust2

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Goal.md  README.md  TODO.md
.config/: insta.toml
.github/agents/: cli-orchestrator.agent.md  gerneral-purpose.agent.md  java-analyst.agent.md  module-analyst.agent.md  opt-orchestrator.agent.md  orchestrator.agent.md  parity-orchestrator.agent.md  parity-verifier.agent.md  port-engineer.agent.md  review-gate.agent.md
.github/instructions/: ops-policy.instructions.md  rust-parity.instructions.md  rust.instructions.md  terminal-reconciliation.instructions.md  terminal-reconciliation.instructions.txt
.github/workflows/: ci.yml  ignore-audit.yml  parity.yml  sweep.yml
benches/: cigar_parser_bytes.rs  variation_entries_bench.rs
copilot-office/missions/: parity-hybrid-handoff.md
docs/: bai-granularity-findings.md  handoff-multithreading.md  known-parity-gaps.md  parity-scope.md  performance.md  self-hosted-runner.md  shm-staging-design.md  sweep-parity.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: complement_sequence.rs  fisher_exact.rs  fuzz_bam_names_parse.rs  fuzz_parse_cigar_string.rs  fuzz_substr_with_len.rs  substr_with_len.rs
scripts/: aa_gate.sh  backfill_chunks_json.py  batch_fixtures.sh  bisect_parity.sh  check_ignore_annotations.sh  check_ignored_tests.sh  check_preset_applicability.sh  check_preset_drift.sh  config_e2e_surface_gate.sh  config_presets.tsv  dual_run.py  e2e_sweep_gate.py  e2e_sweep_gate.sh  extract_fixture.py  gen_e2e_golden_tsv.sh  gen_e2e_sweep_golden.sh  gen_somatic_sweep_bed.sh  gen_sweep_bed.sh  ignored_tests_allowlist.txt  io_backend_bench.py  parity_status.sh  pilot_generate.py  sample_regions.py  sample_regions.sh  sort_sweep_fixtures.py  sweep_aa_check.sh  sweep_fixtures.sh  sweep_fixtures_chunk_parallel.py  sweep_fixtures_parallel.py  sweep_generate_v2.py  sync_sweep_cache.sh
scripts/lib/: merge_manifest.py  shm_slice.py
scripts/tests/: test_dual_run.py  test_e2e_sweep_gate.py  test_sort_sweep_fixtures.py  test_sweep_fixtures_chunk_parallel.py  test_sweep_fixtures_parallel.py
src/: AGENTS.md  config.rs  data.rs  fisher.rs  java_hashmap_order.rs  lib.rs  modes.rs  patterns.rs  prelude.rs  reference.rs  scope.rs  utils.rs  variations.rs
src/mods/: amplicon_post_process.rs  cigar_modifier.rs  cigar_parser.rs  indexed_reader_cache.rs  mod.rs  output.rs  sam_file_parser.rs  simple_post_process.rs  somatic_post_process.rs  structural_variants_processor.rs  to_vars_builder.rs  variation_realigner.rs
src/parity/: diff.rs  format.rs  mod.rs  snapshot.rs
testdata/: expected_failing_cells.txt
tests/: SWEEP_FIXTURES.md  config_slug_uniqueness.rs  dual_run_emit.rs  parity_cigar_modifier.rs  parity_cigar_modifier_sweep.rs  parity_cigar_parser.rs  parity_cigar_parser_sweep.rs  parity_config_e2e.rs  parity_config_e2e_cells.rs  parity_e2e.rs  parity_e2e_config.rs  parity_e2e_sweep.rs  parity_e2e_sweep_somatic.rs  parity_parallel_determinism.rs  parity_realigner.rs  parity_realigner_sweep.rs  parity_sam_file_parser.rs  parity_sam_file_parser_sweep.rs  parity_suite.rs  parity_sv_processor.rs  parity_sv_processor_sweep.rs  parity_sweep_suite.rs  parity_tovars.rs  parity_tovars_sweep.rs  pbt_utils.proptest-regressions  pbt_utils.rs  pilot_v2_readback.rs
tests/common/: mod.rs
tests/parity_e2e_sweep/: common.rs  hg002_sweep.rs  hg005_exome_sweep.rs  na12878_exome_sweep.rs  na12878_lowcov_sweep.rs  wes_il_pair_sweep.rs
tmp/: phase10-monitor.md
(+110 files in other folders)
