[package]
name = "vardict-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.vardict_rs]
path = ".."

[profile.release]
panic = "unwind"

[[bin]]
name = "fuzz_parse_cigar_string"
path = "fuzz_targets/fuzz_parse_cigar_string.rs"
test = false
doc = false

[[bin]]
name = "fuzz_substr_with_len"
path = "fuzz_targets/fuzz_substr_with_len.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bam_names_parse"
path = "fuzz_targets/fuzz_bam_names_parse.rs"
test = false
doc = false